config.json: updated title in main_menu

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
             "style": "link"
         },
         {
-            "title": "lorem-ipsum",
+            "title": "Blog",
             "url": "lorem-ipsum",
             "style": "primary",
             "arrow": false,
