config.json: updated url in main_menu

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,7 +30,7 @@
         },
         {
             "title": "Blog",
-            "url": "lorem-ipsum",
+            "url": "blog.planty.com",
             "style": "primary",
             "arrow": false,
             "type": "action"
